--- a/0x03-responsive_design/07-styles.css
+++ b/0x03-responsive_design/07-styles.css
@@ -351,6 +351,18 @@ a:active {
     background: var(--color-white);
 }
 
+@media (max-width: 480px) {
+    html {
+        font-size: 57%;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+    html {
+        font-size: 60%;
+    }
+}
+
 /* Helpers
       ============================= */
 main img {
