--- a/0x03-responsive_design/08-styles.css
+++ b/0x03-responsive_design/08-styles.css
@@ -351,6 +351,18 @@ a:active {
     background: var(--color-white);
 }
 
+@media (max-width: 480px) {
+    html {
+        font-size: 57%;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+    html {
+        font-size: 60%;
+    }
+}
+
 /* Helpers
       ============================= */
 main img {
@@ -737,6 +749,21 @@ ul.row {
 
 .card-work:hover .card-title {
     opacity: 1;
+}
+
+@media (max-width: 767px) {
+    .card-work .card-inner {
+        --text-color: var(--color-white);
+        position: relative;
+    }
+
+    .card-work .card-title {
+        opacity: 1;
+    }
+
+    .card-work .card-title a {
+        padding: 2rem 1rem 0 1rem;
+    }
 }
 
 /* Card SERVICES
