--- a/0x03-responsive_design/100-styles.css
+++ b/0x03-responsive_design/100-styles.css
@@ -351,6 +351,18 @@ a:active {
     background: var(--color-white);
 }
 
+@media (max-width: 480px) {
+    html {
+        font-size: 57%;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+    html {
+        font-size: 60%;
+    }
+}
+
 /* Helpers
       ============================= */
 main img {
@@ -539,6 +551,22 @@ ul.row {
     fill: var(--text-color);
 }
 
+@media (max-width: 767px) {
+    :root {
+        --footer-padding: 5rem 2rem 1rem;
+    }
+
+    .footer .social.nav,
+    .footer .footer-nav {
+        text-align: center;
+    }
+
+    .footer .social.nav li+li,
+    .footer .footer-nav li+li {
+        padding-left: 2rem;
+    }
+}
+
 /*** 3. SECTION ***/
 
 /* Section (all styles)
@@ -622,6 +650,11 @@ ul.row {
     align-items: flex-start;
     justify-content: center;
     min-height: 35vh;
+}
+
+.article-page .section-hero {
+    margin-top: -8.5rem;
+    padding-top: 5rem;
 }
 
 @media (max-width: 767px) {
@@ -737,6 +770,21 @@ ul.row {
 
 .card-work:hover .card-title {
     opacity: 1;
+}
+
+@media (max-width: 767px) {
+    .card-work .card-inner {
+        --text-color: var(--color-white);
+        position: relative;
+    }
+
+    .card-work .card-title {
+        opacity: 1;
+    }
+
+    .card-work .card-title a {
+        padding: 2rem 1rem 0 1rem;
+    }
 }
 
 /* Card SERVICES
@@ -865,6 +913,21 @@ ul.row {
     text-align: center;
 }
 
+.post {
+    margin: 0 2rem;
+}
+
+@media (max-width: 767px) {
+    .post {
+        flex-direction: column;
+        margin: 2rem;
+    }
+
+    .post-content {
+        padding-left: 0;
+    }
+}
+
 /* Post Meta
       ============================= */
 
@@ -925,6 +988,14 @@ ul.row {
 
 .post-comments .section-title {
     font-variant: small-caps;
+}
+
+@media (max-width: 767px) {
+    .post-comments {
+        width: calc(100% - 4rem);
+        margin: 2rem;
+        padding: 0;
+    }
 }
 
 /* Basic form
